[gd_scene load_steps=24 format=3 uid="uid://b1pcpu1pgyter"]

[ext_resource type="Script" path="res://scripts/place.gd" id="1_xv20c"]
[ext_resource type="Texture2D" uid="uid://dh1c0bjqxpkmk" path="res://assets/images/1200px-Checkerboard_pattern.svg.png" id="2_fq5mu"]
[ext_resource type="Script" path="res://scripts/Camera3D.gd" id="3_lscat"]
[ext_resource type="PackedScene" uid="uid://dk1fcb0gq8nsf" path="res://scenes/fighters/killer_bean.tscn" id="4_ylrie"]
[ext_resource type="Script" path="res://scripts/UI/InputDisplay.gd" id="5_5fcy6"]
[ext_resource type="Theme" uid="uid://d4djrml06wuet" path="res://epic_theme.tres" id="5_hsa1r"]
[ext_resource type="Script" path="res://scripts/UI/Healthbar.gd" id="6_71yoe"]
[ext_resource type="Script" path="res://scripts/UI/PauseMenu.gd" id="7_n6725"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_46q82"]
albedo_color = Color(0.325441, 0.325441, 0.325441, 0)
albedo_texture = ExtResource("2_fq5mu")
uv1_scale = Vector3(32.23, 32.23, 32.23)

[sub_resource type="BoxMesh" id="BoxMesh_3a5gf"]
lightmap_size_hint = Vector2i(104, 66)
material = SubResource("StandardMaterial3D_46q82")
size = Vector3(10, 1, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7xqbj"]
points = PackedVector3Array(-5, -0.5, -5, -5, 0.5, -5, 5, -0.5, -5, -5, -0.5, 5, -5, 0.5, 5, 5, 0.5, -5, 5, -0.5, 5, 5, 0.5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ymuep"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_u32yu"]
material = SubResource("StandardMaterial3D_ymuep")
size = Vector3(25.945, 18.91, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dd7mj"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuqy1"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwvnx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdklx"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.355314, 0.355314, 0.355314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l0gyp"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_iatxg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qkhc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qgypo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6y3i4"]
size = Vector3(1, 8.34473, 17.056)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_br2sa"]
bg_color = Color(0.517647, 0.298039, 0.298039, 1)

[node name="place" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.994554, -0.0772501, 0.536096)
script = ExtResource("1_xv20c")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [-2.0]

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(2.565, 0, 0, 0, 2.565, 0, 0, 0, 2.565, 0, -1.2977, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.07, 0, 1.996)
mesh = SubResource("BoxMesh_3a5gf")

[node name="FloorCollider" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.07, 0, 1.996)
shape = SubResource("ConvexPolygonShape3D_7xqbj")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.943, 5.005)
fov = 45.0
near = 0.01
script = ExtResource("3_lscat")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.16903, 0)

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.39561)
mesh = SubResource("BoxMesh_u32yu")

[node name="KillerBean" parent="." instance=ExtResource("4_ylrie")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.445, 0.943, -0.669)

[node name="KillerBean2" parent="." instance=ExtResource("4_ylrie")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.943, -0.669)
player = 2

[node name="HUD" type="CanvasLayer" parent="."]

[node name="InputDisplay" type="Label" parent="HUD"]
clip_contents = true
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.5
anchor_right = 0.003
anchor_bottom = 0.5
offset_left = -0.76
offset_top = -340.0
offset_right = 712.24
offset_bottom = -228.0
theme = ExtResource("5_hsa1r")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "NEUTRAL + NONE"
vertical_alignment = 2
text_overrun_behavior = 2
max_lines_visible = 10
script = ExtResource("5_5fcy6")

[node name="Healthbar1" type="PanelContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -770.0
offset_top = 50.0
offset_right = -70.0
offset_bottom = 90.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_dd7mj")
script = ExtResource("6_71yoe")

[node name="ColorRect" type="ColorRect" parent="HUD/Healthbar1"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(0, 1, 0, 1)

[node name="Healthbar2" type="PanelContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 70.0
offset_top = 50.0
offset_right = 770.0
offset_bottom = 90.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_cuqy1")
script = ExtResource("6_71yoe")
player = 2

[node name="ColorRect" type="ColorRect" parent="HUD/Healthbar2"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(0, 1, 0, 1)

[node name="Manabar1" type="PanelContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -570.0
offset_top = 100.0
offset_right = -70.0
offset_bottom = 130.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_dd7mj")
script = ExtResource("6_71yoe")

[node name="ColorRect" type="ColorRect" parent="HUD/Manabar1"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(0, 0.443137, 1, 1)

[node name="Manabar2" type="PanelContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 70.0
offset_top = 100.0
offset_right = 570.0
offset_bottom = 130.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_cuqy1")
script = ExtResource("6_71yoe")
player = 2

[node name="ColorRect" type="ColorRect" parent="HUD/Manabar2"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(0, 0.443137, 1, 1)

[node name="Clock" type="PanelContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cwvnx")

[node name="Label" type="Label" parent="HUD/Clock"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "120"
horizontal_alignment = 1
clip_text = true

[node name="Rounds1" type="HBoxContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_top = 15.0
offset_right = -70.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_constants/separation = 10
alignment = 1

[node name="Round1" type="PanelContainer" parent="HUD/Rounds1"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_fdklx")

[node name="ColorRect" type="ColorRect" parent="HUD/Rounds1/Round1"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(1, 1, 0, 0)

[node name="Round2" type="PanelContainer" parent="HUD/Rounds1"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_fdklx")

[node name="ColorRect" type="ColorRect" parent="HUD/Rounds1/Round2"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(1, 1, 0, 0)

[node name="Rounds2" type="HBoxContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 70.0
offset_top = 15.0
offset_right = 130.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_constants/separation = 10
alignment = 1

[node name="Round1" type="PanelContainer" parent="HUD/Rounds2"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_fdklx")

[node name="ColorRect" type="ColorRect" parent="HUD/Rounds2/Round1"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(1, 1, 0, 0)

[node name="Round2" type="PanelContainer" parent="HUD/Rounds2"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_fdklx")

[node name="ColorRect" type="ColorRect" parent="HUD/Rounds2/Round2"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
color = Color(1, 1, 0, 0)

[node name="Icon1" type="PanelContainer" parent="HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxEmpty_l0gyp")

[node name="ColorRect" type="TextureRect" parent="HUD/Icon1"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
texture = SubResource("PlaceholderTexture2D_iatxg")

[node name="Icon2" type="PanelContainer" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 130.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_hsa1r")
theme_override_styles/panel = SubResource("StyleBoxEmpty_8qkhc")

[node name="ColorRect" type="TextureRect" parent="HUD/Icon2"]
layout_mode = 2
theme = ExtResource("5_hsa1r")
texture = SubResource("PlaceholderTexture2D_qgypo")

[node name="Nametag1" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -770.0
offset_top = 11.0
offset_right = -490.0
offset_bottom = 45.0
grow_horizontal = 2
theme = ExtResource("5_hsa1r")
theme_override_font_sizes/font_size = 24
text = "Killer Bean"

[node name="Nametag2" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 490.0
offset_top = 11.0
offset_right = 770.0
offset_bottom = 45.0
grow_horizontal = 2
theme = ExtResource("5_hsa1r")
theme_override_font_sizes/font_size = 24
text = "Killer Bean"
horizontal_alignment = 2

[node name="InvisibleWalls" type="StaticBody3D" parent="."]

[node name="WallRight" type="CollisionShape3D" parent="InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5171, 2.28369, 0.93573)
shape = SubResource("BoxShape3D_6y3i4")

[node name="WallLeft" type="CollisionShape3D" parent="InvisibleWalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.1648, 2.284, 0.936)
shape = SubResource("BoxShape3D_6y3i4")

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("7_n6725")

[node name="Shade" type="ColorRect" parent="PauseMenu"]
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.129412, 0.129412, 0.129412, 0.372549)

[node name="BoxMenu" type="PanelContainer" parent="PauseMenu/Shade"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.469
anchor_right = 0.5
anchor_bottom = 0.469
offset_left = -560.0
offset_top = -306.52
offset_right = -160.0
offset_bottom = -0.52002
theme_override_styles/panel = SubResource("StyleBoxFlat_br2sa")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Shade/BoxMenu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="OptionMenu" type="VBoxContainer" parent="PauseMenu/Shade/BoxMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="PauseMenu/Shade/BoxMenu/MarginContainer/OptionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Paused"

[node name="ResumeButton" type="Button" parent="PauseMenu/Shade/BoxMenu/MarginContainer/OptionMenu"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 36
text = "Resume"
alignment = 0

[node name="MoveListButton" type="Button" parent="PauseMenu/Shade/BoxMenu/MarginContainer/OptionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Move List"
alignment = 0

[node name="SettingsButton" type="Button" parent="PauseMenu/Shade/BoxMenu/MarginContainer/OptionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
alignment = 0

[node name="ExitMatchButton" type="Button" parent="PauseMenu/Shade/BoxMenu/MarginContainer/OptionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Exit Match"
alignment = 0

[node name="Movelist" type="VBoxContainer" parent="PauseMenu/Shade"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Shade/Movelist"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="HSeparator" type="HSeparator" parent="PauseMenu/Shade/Movelist"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/Shade/Movelist"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PauseMenu/Shade/Movelist/HBoxContainer"]
custom_minimum_size = Vector2(950, 0)
layout_mode = 2

[node name="PanelContainer" type="MarginContainer" parent="PauseMenu/Shade/Movelist/HBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(950, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="P1moves" type="VBoxContainer" parent="PauseMenu/Shade/Movelist/HBoxContainer/ScrollContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/Shade/Movelist/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="PauseMenu/Shade/Movelist/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(950, 0)
layout_mode = 2

[node name="PanelContainer" type="MarginContainer" parent="PauseMenu/Shade/Movelist/HBoxContainer/ScrollContainer2"]
custom_minimum_size = Vector2(950, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="P2moves" type="VBoxContainer" parent="PauseMenu/Shade/Movelist/HBoxContainer/ScrollContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
